<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_centerInParent="true"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/anass"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt2"
            android:textSize="24sp"
            android:textColor="@color/primaryTextColor"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/Number1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/number1"
            android:inputType="number"
            android:backgroundTint="@color/buttonTextColor"
            android:layout_marginBottom="15dp" />

        <EditText
            android:id="@+id/Number2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/number2"
            android:backgroundTint="@color/buttonTextColor"
            android:inputType="number"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btnAdd"
                android:text="@string/btnAdd"
                android:textColor="@color/buttonTextColor"
                android:backgroundTint="@color/buttonBackground"
                android:layout_marginEnd="5dp"
                android:layout_width="60dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnSub"
                android:text="@string/btnSub"
                android:textColor="@color/buttonTextColor"
                android:backgroundTint="@color/buttonBackground"
                android:layout_marginEnd="5dp"
                android:layout_width="60dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnMult"
                android:text="@string/btnMult"
                android:textColor="@color/buttonTextColor"
                android:backgroundTint="@color/buttonBackground"
                android:layout_marginEnd="5dp"
                android:layout_width="60dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnDiv"
                android:text="@string/btnDiv"
                android:textColor="@color/buttonTextColor"
                android:backgroundTint="@color/buttonBackground"
                android:layout_width="60dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/primaryTextColor"
            android:textSize="32sp" />



        <Button
            android:id="@+id/back1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back1"
            android:textColor="@color/buttonTextColor"
            android:backgroundTint="@color/buttonBackground"
            android:layout_marginTop="10dp" />
    </LinearLayout>
</RelativeLayout>
